--- a/REACT/react_02/src/components/Products.css
+++ b/REACT/react_02/src/components/Products.css
@@ -1,18 +1,17 @@
 .cards {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .products--card {
-  border: solid rgb(130, 13, 226) 2px;
-  border-radius: 5px;
-  padding: 20px;
-  margin: 15px;
-  color: aliceblue;
+    border: solid gray 2px;
+    border-radius: 5px;
+    text-align: center;
+    padding: 20px;
+    margin: 15px;
 }
 
-img {
-  width: 250px;
-  height: 250px;
+h3, p, h4 {
+    margin: 0;
 }
